--- a/code/photoShare/views/index.jade
+++ b/code/photoShare/views/index.jade
@@ -1,5 +1,6 @@
 h1 PhotoShare
 p Hey, let's share some photos!
+p= msg
 #main
   #upload
     input(type='file', id='photos', name='photos[]', multiple)
